Fix main.tex comment typo

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt, oneside]{book}
 
-% Adds preamble from preamble.sty (Editable)
+% Adds preamble from preamble.tex (Editable)
 \input{preamble.tex}
 
 % Document information setup
