Fix typo in main.tex

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 
 \begin{document}
 
-% Nakes title page and change pagestyle to be the one defined in preamble.sty
+% Makes title page and change pagestyle to be the one defined in preamble.sty
 \maketitle
 \pagestyle{fancy}
 
